milvus default to 2.5.4, update milvus-helm values
use milvus-helm values for pulsar3
bump version

Signed-off-by: haorenfsa <shaoyue.chen@zilliz.com>